fixing input shadow on mobile

--- a/style.css
+++ b/style.css
@@ -66,4 +66,5 @@ footer{
 .form input{
   width: 100%;
   margin-right: .5rem;
+  -webkit-appearance: none;
 }
